Updated with some style changes
Added a font and changed font sizes, just because I like making things at least look ok.

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -10,6 +10,8 @@ body {
   display: flex;
   justify-content: center;
   border: 1px solid #111111;
+  font-family: 'Mina', sans-serif;
+  font-size: 30px;
 }
 #calcText {
   margin: auto;
@@ -22,6 +24,8 @@ body {
   width: 100px;
   height: 100px;
   border: 1px solid #005ce6;
+  font-family: 'Mina', sans-serif;
+  font-size: 20px;
 }
 
 .btnBig {
@@ -31,6 +35,8 @@ body {
   width: 200px;
   height: 100px;
   border: 1px solid #005ce6;
+  font-family: 'Mina', sans-serif;
+  font-size: 20px;
 }
 
 /*Animationsssss*/
